--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -32,8 +32,11 @@
 
 .nav__avatar {
   position: fixed;
+  top: 10px;
   right: 0;
   width: 30px;
   height: 30px;
   cursor: pointer;
+  padding-right: 20px;
+  object-fit: contain;
 }
